e se implementarmos um storage, te ajudaria? e como é passo a passo

--- a/firebase.json
+++ b/firebase.json
@@ -1,3 +1,4 @@
+
 {
   "hosting": {
     "public": "out",
@@ -16,5 +17,8 @@
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
