--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -48,6 +47,7 @@
     "firebase": "^11.9.1",
     "framer-motion": "^11.2.12",
     "genkit": "^1.15.5",
+    "html2canvas": "^1.4.1",
     "immer": "^10.1.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.475.0",
